# cometblue

./: .gitignore  README.md  pygattlib.patch  requirements.txt  setup.cfg  setup.py
cometblue/: cli.py  device.py  discovery.py
