[metadata]
name = cometblue
summary = Command line tool for "Comet Blue" radiator thermostat
author = Ivan Mironov
author-email = mironov.ivan@gmail.com
home-page = https://localhost/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cometblue

[entry_points]
console_scripts =
    cometblue = cometblue.cli:main
