[metadata]
name = cometblue
summary = Command line tool and python library for "Comet Blue" radiator thermostat
author = Ivan Mironov (original), Lukas Rucka (forked)
author-email = xrucka@fi.muni.cz
home-page = https://github.com/xrucka/cometblue
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
keywords =
    cometblue
    bluetooth
    ble
    gatt
description-file = README.md

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cometblue

[entry_points]
console_scripts =
    cometblue = cometblue.cli:main
